# ml-research-harness

./: .gitignore  CLAUDE.md  README.md  WORKFLOW.md  pyproject.toml  workflow.py
.claude/agents/: coder.md  experimenter.md  paper-writer.md  refiner.md  researcher.md  reviewer.md  runner.md
.opencode/agents/: coder.md  experimenter.md  paper-writer.md  refiner.md  researcher.md  reviewer.md  runner.md
