[project]
name = "ml-research-harness"
version = "0.1.0"
description = "Harness Engineering for ML Scientific Research"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "tensorboard>=2.20.0",
    "ty>=0.0.40",
]

[tool.pytest.ini_options]
pythonpath = ["."]